[tool.poetry]
name = "cityscapes_od"
version = "0.1.0"
description = ""
authors = ["Chen Rothschild <chen.rothschild@tensorleap.ai>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tqdm = "^4.65.0"
google-cloud-storage = "^2.10.0"
pyyaml = "^6.0"
matplotlib = "3.7.2"
tensorflow = {version = "2.12.0", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = "2.12.0", markers = "sys_platform == 'darwin'"}
automium-web = "^0.1.1"
utils = "^1.0.1"
onnx = "^1.14.0"
opencv-python = "^4.8.0.74"
webcolors = "^1.13"
code-loader = "1.0.71"
code-loader-helpers = "1.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "leap_test: check_integration"
custom_test = "leap_custom_test: check_custom_integration"

